# voxel-engine

./: .gitignore  CMakeLists.txt  build.sh
headers/: Block.hpp  BlockTextureMap.hpp  Camera.hpp  CameraController.hpp  EventHandler.hpp  EventListener.hpp  GrassBlock.hpp  Mesh.hpp  ShaderProgram.hpp  StoneBlock.hpp  Utils.hpp
include/: Application.hpp  Block.hpp  BlockTextureMap.hpp  BlockType.hpp  Camera.hpp  Chunk.hpp  ChunkGenerator.hpp  EventHandler.hpp  HashUtils.hpp  Mesh.hpp  MeshPack.hpp  Player.hpp  SparseChunkData.hpp  ThreadPool.hpp  Utils.hpp  World.hpp
res/shaders/: fragment.glsl  vertex.glsl
src/: World.cpp  application.cpp  block.cpp  chunk.cpp  chunkGenerator.cpp  main.cpp  player.cpp  shaderProgram.cpp  sparceChunkData.cpp  world.cpp
src/blocks/: grassBlock.cpp  stoneBlock.cpp
src/utils/: camera.cpp  cameraController.cpp  eventHandler.cpp  mesh.cpp  shaderProgram.cpp  utils.cpp
